# AutoScrapAndScreenshots

./: .gitignore  Application.cpp  Application.h  AutoScrapAndScreenShots.qrc  CMakeLists.txt  ConsoleLogsDisplay.cpp  ConsoleLogsDisplay.h  CsvParser.cpp  CsvParser.h  MainWindow.cpp  MainWindow.h  MainWindowWidget.cpp  MainWindowWidget.h  README.md  StreamSink.h  UniqueUrlStandardModel.cpp  UniqueUrlStandardModel.h  auto-scrap-and-screenshots_fr_FR.ts  main.cpp
